--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
             height: 2px;
             bottom: -5px;
             left: 0;
-            background-color: #B76E79;
+            background-color: #CA3F16;
             transition: width 0.3s ease;
         }
         .nav-links a:hover::after {
             width: 100%;
         }
         .nav-links a:hover {
-            color: #B76E79;
+            color: #CA3F16;
         }
         /* Hero Section */
         #hero {
@@ -99,7 +99,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle at 20% 80%, rgba(183, 110, 121, 0.05) 0%, transparent 50%);
+            background: radial-gradient(circle at 20% 80%, rgba(202, 63, 22, 0.05) 0%, transparent 50%);
             pointer-events: none;
         }
         .hero-content h1 {
@@ -128,20 +128,20 @@
         .cta {
             display: inline-block;
             padding: 14px 32px;
-            background: linear-gradient(135deg, #B76E79 0%, #D4A5A5 100%);
+            background: linear-gradient(135deg, #CA3F16 0%, #F4A261 100%);
             color: #ffffff;
             text-decoration: none;
             border-radius: 50px;
             font-weight: 600;
             font-size: 1rem;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(183, 110, 121, 0.2);
+            box-shadow: 0 4px 15px rgba(202, 63, 22, 0.2);
             opacity: 0;
             animation: fadeInUp 1s ease 0.6s forwards;
         }
         .cta:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(183, 110, 121, 0.3);
+            box-shadow: 0 6px 20px rgba(202, 63, 22, 0.3);
         }
         @keyframes fadeInUp {
             to {
@@ -191,7 +191,7 @@
         }
         .map-section p {
             font-style: italic;
-            color: #B76E79;
+            color: #CA3F16;
             margin-top: 1.5rem;
             font-size: 1.15rem;
             font-weight: 600;
@@ -223,7 +223,7 @@
             left: 0;
             width: 100%;
             height: 4px;
-            background: linear-gradient(90deg, #B76E79, #D4A5A5);
+            background: linear-gradient(90deg, #CA3F16, #F4A261);
         }
         .expertise-card:hover {
             transform: translateY(-8px);
@@ -261,7 +261,7 @@
         }
         .news-list li:hover {
             transform: translateX(2px);
-            border-left-color: #B76E79;
+            border-left-color: #CA3F16;
         }
         .news-list a {
             text-decoration: none;
@@ -272,7 +272,7 @@
             line-height: 1.4;
         }
         .news-list a:hover {
-            color: #B76E79;
+            color: #CA3F16;
         }
         .news-list p {
             margin-top: 0.3rem;
@@ -285,7 +285,7 @@
             margin-top: 2rem;
         }
         .news-toggle button {
-            background: linear-gradient(135deg, #B76E79 0%, #D4A5A5 100%);
+            background: linear-gradient(135deg, #CA3F16 0%, #F4A261 100%);
             color: #ffffff;
             padding: 10px 24px;
             border: none;
@@ -297,7 +297,7 @@
         }
         .news-toggle button:hover {
             transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(183, 110, 121, 0.3);
+            box-shadow: 0 4px 12px rgba(202, 63, 22, 0.3);
         }
         .additional-news {
             max-height: 0;
@@ -322,7 +322,7 @@
             color: #4a4a4a;
         }
         .contact-content a {
-            color: #B76E79;
+            color: #CA3F16;
             text-decoration: none;
             font-weight: 600;
         }
@@ -354,11 +354,11 @@
         .form-group input:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #B76E79;
+            border-color: #CA3F16;
             background: #ffffff;
         }
         .form-group button {
-            background: linear-gradient(135deg, #B76E79 0%, #D4A5A5 100%);
+            background: linear-gradient(135deg, #CA3F16 0%, #F4A261 100%);
             color: #ffffff;
             padding: 14px 32px;
             border: none;
@@ -371,7 +371,7 @@
         }
         .form-group button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(183, 110, 121, 0.3);
+            box-shadow: 0 6px 20px rgba(202, 63, 22, 0.3);
         }
         /* Footer */
         footer {
@@ -457,8 +457,8 @@
                 <p>We work with private companies, investors, and public-sector partners to structure, develop, and formalize projects and portfolios that are technically sound, commercially viable, and aligned with international ESG and sustainability standards.</p>
             </div>
             <div class="map-section">
-                <img src="https://thumbs.dreamstime.com/b/modern-gold-world-map-design-vector-trendy-120313026.jpg" alt="Elegant Rose Gold World Map - International Experience">
-                <p>Global Reach: Experience working internationally across sustainable development projects.</p>
+                <img src="map1" alt="Elegant Rose Gold World Map - International Experience">
+                <p>We are a multidisciplinary advisory and development firm with strong international experience, having worked closely with partners, clients, and institutions across the United States, Japan, Canada, the European Union, Australia, and ASEAN.</p>
             </div>
         </div>
     </section>
