Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 <p>We work with private companies, investors, and public-sector partners to structure, develop, and formalize projects and portfolios that are technically sound, commercially viable, and aligned with international ESG and sustainability standards.</p>
             </div>
             <div class="map-section">
-                <img src="map1" alt="Elegant Rose Gold World Map - International Experience">
+                <img src="main.map1" alt="Elegant Rose Gold World Map - International Experience">
                 <p>We are a multidisciplinary advisory and development firm with strong international experience, having worked closely with partners, clients, and institutions across the United States, Japan, Canada, the European Union, Australia, and ASEAN.</p>
             </div>
         </div>
