--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </ul>
             <div class="lang-buttons">
                 <button id="lang-en" class="lang-btn active">EN</button>
-                <button id="lang-ja" class="lang-btn">日本語</button>
+                <button id="lang-ja" class="lang-btn">日本</button>
             </div>
         </nav>
     </header>
