--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lam Capital - 持続可能な開発に向けた投資・アドバイザリー</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@300;400;600&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.png">
+<link rel="icon" type="image/svg+xml" href="favicon.png">
     <style>
         /* Reset and Base Styles */
         * {
