--- a/index.html
+++ b/index.html
@@ -486,7 +486,10 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo" id="logo">Lam Capital</div>
+            <div class="logo" id="logo">
+    <img src="logolong.png" alt="Lam Capital" style="height: 48px; width: auto;">
+    <!-- or PNG: <img src="logo.png" alt="Lam Capital" style="height: 48px; width: auto;"> -->
+</div>
             <ul class="nav-links">
                 <li><a href="#hero" id="nav-home">ホーム</a></li>
                 <li><a href="#about" id="nav-about">当社について</a></li>
