Change default language from Japanese to English

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
             toggleBtn.textContent = isExpanded ? translations[currentLang].toggle_less : translations[currentLang].toggle_initial;
         });
         // Initialize language
-        setLanguage('ja');
+        setLanguage('en');
     </script>
 </body>
 </html>
