--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <nav class="container">
             <div class="logo" id="logo">
     <img src="logolong.png" alt="Lam Capital" style="height: 48px; width: auto;">
-    <!-- or PNG: <img src="logo.png" alt="Lam Capital" style="height: 48px; width: auto;"> -->
+    <!-- or PNG: <img src="logolong.png" alt="Lam Capital" style="height: 48px; width: auto;"> -->
 </div>
             <ul class="nav-links">
                 <li><a href="#hero" id="nav-home">ホーム</a></li>
