--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lam Capital - Investment & Advisory for Sustainable Development</title>
+    <title>Lam Capital - Where capital, real estate, and sustainability converge</title>
     <!-- Favicon -->
     <link rel="icon" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.png">
@@ -527,8 +527,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1 id="hero-h1">Lam Capital</h1>
-                <p class="tagline" id="hero-tagline">持続可能な開発を支える投資・アドバイザリー</p>
-                <p class="subtitle" id="hero-subtitle">戦略・知見・資本を、持続可能な価値創出へ</p>
+                <p class="tagline" id="hero-tagline">資本、不動産、サステナビリティが交わるアドバイザリー</p>
+                <p class="subtitle" id="hero-subtitle">ベトナム市場の不動産・M&Aアドバイザリー、ESGを軸とした開発支援、ならびに戦略実行を支えるエンタープライズソリューションを提供しています。</p>
                 <a href="#about" class="cta" id="hero-cta">詳細はこちら</a>
             </div>
         </div>
@@ -536,50 +536,61 @@
     <section id="about">
         <div class="container">
             <div class="about-content">
-                <p id="about-p1">Lam Capital Investment & Advisory Co., Ltd. は、持続可能な開発、都市システム、不動産および関連分野において、投資アドバイザリー、経営コンサルティング、調査研究、プロジェクトデリバリー支援を提供するコンサルティングおよびアドバイザリー企業です。</p>
-                <p id="about-p2">当社は、民間企業、投資家、公的機関と連携し、国際的なESGおよびサステナビリティ基準に適合した、技術的信頼性と商業的実現性を備えるプロジェクトおよび投資ポートフォリオの構築・高度化を支援しています。</p>
+                <p id="about-p1">Lam Capital Investment & Advisory Co., Ltd. *bold* は、サステナブル開発、都市システム、不動産および関連分野において、投資アドバイザリー、経営コンサルティング、調査・リサーチ、ならびにプロジェクト実行支援を行う分野横断型のアドバイザリーファームです。</p>
+                <p id="about-p2">民間企業、投資家、公共セクターとの連携を通じて、技術的妥当性および事業性を備え、国際的なESG・サステナビリティ基準に整合したプロジェクトおよびポートフォリオの構築・整理・実行を支援しています。</p>
             </div>
             <div class="map-section">
                 <img src="map1.jpg" >
-                <p id="map-p">Lam Capital は、米国、日本、カナダ、欧州連合、オーストラリア、ASEAN 諸国において、パートナー、クライアント、金融機関および公的機関と連携した豊富な国際プロジェクト経験を有しています。地域の実情に即した知見と国際水準の専門性を組み合わせ、グローバルに通用する実行力あるソリューションを提供します。</p>
+                <p id="map-p">複雑な開発を、投資可能で持続可能な成果へ。
+                <br> 不動産・M&Aアドバイザリー｜ESG・グリーン開発｜エンタープライズソリューション </p>
             </div>
         </div>
     </section>
     <section id="expertise">
         <div class="container">
-            <h2 id="expertise-h2">当社の専門分野</h2>
+            <h2 id="expertise-h2">提供サービス</h2>
             <div class="expertise-grid">
                 <div class="expertise-card">
-                    <h3 id="card1-h3">戦略アドバイザリー・経営コンサルティング</h3>
-                    <p id="card1-p">事業戦略の策定、投資計画、組織的意思決定を支援する戦略アドバイザリーおよび経営コンサルティングを提供します。企業戦略、プロジェクトの構造化、オペレーションモデル設計、リスク管理を通じて、中長期的な企業価値の向上を支援します。</p>
+                    <h3 id="card1-h3">戦略アドバイザリー／マネジメント・コンサルティング</h3>
+                    <p id="card1-p">事業開発、投資計画、ならびに組織的な意思決定を支えるため、マネジメント・コンサルティングおよび戦略アドバイザリーを提供しています。コーポレート戦略、プロジェクトのストラクチャリング、オペレーションモデル、リスクマネジメントを対象に、中長期的な価値創出を重視した支援を行っています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card2-h3">調査研究・市場分析・応用R&D</h3>
-                    <p id="card2-p">経済・技術・社会的側面を横断した調査研究および市場分析を実施します。市場調査、フィージビリティスタディ、応用研究、技術分析を通じ、政策設計、投資判断、プロジェクト開発に資する実践的な知見を提供します。</p>
+                    <h3 id="card2-h3">リサーチ／マーケット・インテリジェンス／応用R&D</h3>
+                    <p id="card2-p">経済、技術、社会の各側面から、リサーチおよび市場分析を行っています。市場調査、フィージビリティスタディ、応用研究、技術分析を通じて、政策設計、投資判断、ならびにプロジェクト開発を支える知見の提供を行っています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card3-h3">持続可能な建設・建築環境サービス</h3>
-                    <p id="card3-p">技術アドバイザリー、システム導入支援、プロジェクトコーディネーション、完了支援を通じて、建設および建築関連プロジェクトを包括的にサポートします。住宅、商業施設、専門用途開発において、持続可能性、効率性、ライフサイクル性能を統合した開発を推進します。</p>
+                    <h3 id="card3-h3">サステナブル建設／ビルト・エンバイロメント関連サービス</h3>
+                    <p id="card3-p">建設および建築関連業務において、技術アドバイザリー、システム導入支援、プロジェクト調整、ならびに竣工支援を提供しています。住宅、商業施設、ならびに特殊用途開発を対象に、サステナビリティ、効率性、ライフサイクル性能を統合したプロジェクト遂行を支援しています。</p>
                 </div>
                 <div class="expertise-card">
                     <h3 id="card4-h3">不動産・都市開発アドバイザリー</h3>
-                    <p id="card4-p">不動産開発および都市計画分野において、初期構想から実行段階まで一貫したアドバイザリーを提供します。土地利用、設計、インフラ、投資戦略を統合し、経済性と持続可能性を両立した、レジリエントで人中心の都市環境の創出を支援します。</p>
+                    <p id="card4-p">不動産開発および都市計画分野において、初期構想段階から実装・実行フェーズまでのプロジェクト推進を支援しています。
+土地利用、設計、インフラ、投資戦略を統合し、レジリエンスと人間中心性、ならびに経済合理性を備えた都市環境の構築を支援しています。
+クトのストラクチャリング、オペレーションモデル、リスクマネジメントを対象に、中長期的な価値創出を重視した支援を行っています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card5-h3">ESG・サステナブルファイナンスアドバイザリー</h3>
-                    <p id="card5-p">環境・社会・ガバナンス（ESG）の視点を、プロジェクト、企業、投資ポートフォリオに体系的に組み込む支援を行います。ESG 戦略策定、サステナビリティ評価、国際的なフレームワークとの整合性確保を通じ、グリーン、サステナブル、気候変動対応型ファイナンスへのアクセスを支援します。</p>
+                    <h3 id="card5-h3">ESG／サステナブル・ファイナンス アドバイザリー</h3>
+                    <p id="card5-p">プロジェクト、企業、ポートフォリオにおけるESG（環境・社会・ガバナンス）の統合を支援しています。
+
+ESG戦略の策定、サステナビリティ評価、国際的フレームワークとの整合を通じて、グリーン、サステナブル、ならびに気候変動対応型ファイナンスへのアクセスを可能にしています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card6-h3">投資向けポートフォリオ構造化</h3>
-                    <p id="card6-p">国内外の投資家に向けたプロジェクトおよび資産ポートフォリオの整備・構造化を支援します。技術・財務・ESG 関連文書の標準化、透明性向上、機関投資家の期待に沿ったポジショニングを通じ、投資実行性の向上を図ります。</p>
+                    <h3 id="card6-h3">投資に向けたポートフォリオ・ストラクチャリング</h3>
+                    <p id="card6-p">国内外の投資家を対象とした投資に向け、プロジェクトおよび資産ポートフォリオの整理・体系化を支援しています。
+
+技術・財務・ESG関連ドキュメントの標準化、透明性の向上を通じて、機関投資家の期待に沿ったポートフォリオ構築を支援しています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card7-h3">グローバル資本・パートナーシップへのアクセス</h3>
-                    <p id="card7-p">地域の有望な投資機会と、国際投資家、開発金融機関、気候関連ファンドを結びつける役割を担います。ローカルプロジェクトの実態を、国際資本の要件に適合した投資準備済み案件へと整理・翻訳します。</p>
+                    <h3 id="card7-h3">グローバル資本およびパートナーシップへのアクセス</h3>
+                    <p id="card7-p">国内の投資機会と、国際的な投資家、開発金融機関、気候ファンドをつなぐ役割を担っています。
+
+ローカルなプロジェクトの実態を投資可能な提案へと整理し、グローバル資本の要件に沿った形での資金導入を支援しています。</p>
                 </div>
                 <div class="expertise-card">
-                    <h3 id="card8-h3">コミュニケーション・メディア・プロモーション</h3>
-                    <p id="card8-p">アドバイザリー業務を補完する形で、コミュニケーション戦略、メディア制作、プロモーション活動を展開しています。コンテンツ開発および映像・音声制作を通じ、プロジェクトの可視性向上、ステークホルダーとの関係構築、市場への効果的な発信を支援します。</p>
+                    <h3 id="card8-h3">コミュニケーション／メディア／プロモーション</h3>
+                    <p id="card8-p">アドバイザリー業務を補完する形で、コンテンツ制作や映像制作を含むコミュニケーション、メディア制作、広告・プロモーション活動を行っています。
+
+プロジェクトの可視性向上、ステークホルダーとの関係構築、ならびに市場への情報発信を支援しています。</p>
                 </div>
             </div>
         </div>
