--- a/index.html
+++ b/index.html
@@ -539,10 +539,11 @@
                 <p id="about-p2">We work with private companies, investors, and public-sector partners to structure, develop, and formalize projects and portfolios that are technically sound, commercially viable, and aligned with international ESG and sustainability standards.</p>
             </div>
             <div class="map-section">
-                <img src="map1.jpg" alt="Vietnam development focus map" loading="lazy">
+                <img src="map1.jpg" alt="Lam Capital Group" loading="lazy">
                 <p id="map-p">
                     <strong>Turning complex developments into investable, sustainable outcomes.</strong><br>
-                    Real estate & M&A advisory | Sustainable development | Enterprise solutions
+                    Real estate & M&A advisory | Sustainable development | Enterprise solutions <br>
+                    At the heart of our work is a simple belief: every investment ultimately serves people. Whether through capital strategy, enterprise transformation, resilience planning, or market expansion, our mission is to help businesses generate not only financial returns, but also prosperity, opportunity, and well-being for the communities they touch.
                 </p>
             </div>
         </div>
