--- a/index.html
+++ b/index.html
@@ -537,13 +537,13 @@
             <div class="about-content">
                 <p id="about-p1"><strong>Lam Capital Investment & Advisory Co., Ltd.</strong> is a multidisciplinary firm providing investment advisory, management consulting, research, and project delivery services across sustainable development, urban systems, real estate, and related industries.</p>
                 <p id="about-p2">We work with private companies, investors, and public-sector partners to structure, develop, and formalize projects and portfolios that are technically sound, commercially viable, and aligned with international ESG and sustainability standards.</p>
+                <p id="about-p3">At the heart of our work is a simple belief: <strong>every investment ultimately serves people</strong>. Whether through capital strategy, enterprise transformation, resilience planning, or market expansion, our mission is to help businesses generate not only financial returns, but also prosperity, opportunity, and well-being for the communities they touch.</p>
             </div>
             <div class="map-section">
                 <img src="map1.jpg" alt="Lam Capital Group" loading="lazy">
                 <p id="map-p">
                     <strong>Turning complex developments into investable, sustainable outcomes.</strong><br>
-                    Real estate & M&A advisory | Sustainable development | Enterprise solutions <br>
-                    At the heart of our work is a simple belief: every investment ultimately serves people. Whether through capital strategy, enterprise transformation, resilience planning, or market expansion, our mission is to help businesses generate not only financial returns, but also prosperity, opportunity, and well-being for the communities they touch.
+                    Real estate & M&A advisory | Sustainable development | Enterprise solutions 
                 </p>
             </div>
         </div>
