--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
                 hero_cta: "Learn More",
                 about_p1: "<strong>Lam Capital Investment & Advisory Co., Ltd.</strong> is a multidisciplinary firm providing investment advisory, management consulting, research, and project delivery services across sustainable development, urban systems, real estate, and related industries.",
                 about_p2: "We work with private companies, investors, and public-sector partners to structure, develop, and formalize projects and portfolios that are technically sound, commercially viable, and aligned with international ESG and sustainability standards.",
+                about_p3: "At the heart of our work is a simple belief: <strong>every investment ultimately serves people</strong>. Whether through capital strategy, enterprise transformation, resilience planning, or market expansion, our mission is to help businesses generate not only financial returns, but also prosperity, opportunity, and well-being for the communities they touch.,
                 map_p: "<strong>Turning complex developments into investable, sustainable outcomes.</strong><br>Real estate & M&A advisory | Sustainable development | Enterprise solutions",
                 expertise_h2: "Our Expertise",
                 card1_h3: "Strategic Advisory & Management Consulting",
@@ -740,6 +741,7 @@
                 hero_cta: "詳細はこちら",
                 about_p1: "<strong>Lam Capital Investment & Advisory Co., Ltd.</strong> は、サステナブル開発、都市システム、不動産および関連分野において、投資アドバイザリー、経営コンサルティング、調査・リサーチ、ならびにプロジェクト実行支援を行う分野横断型のアドバイザリーファームです。",
                 about_p2: "民間企業、投資家、公共セクターとの連携を通じて、技術的妥当性および事業性を備え、国際的なESG・サステナビリティ基準に整合した プロジェクトおよびポートフォリオの構築・整理・実行を支援しています。",
+                about_p3: "私たちの活動の根底にあるのは、<strong>「すべての投資は最終的に人のためにある」</strong>という信念です。 資本戦略、企業変革、レジリエンス戦略、市場拡大支援など、いかなるサービスを提供する場合においても、私たちの使命は、企業が財務的な成果を上げるだけでなく、関わる地域社会に豊かさや機会、そして持続的なウェルビーイングをもたらすことを支援することにあります。",
                 map_p: "<strong>複雑な開発を、投資可能で持続可能な成果へ。</strong><br>不動産・M&Aアドバイザリー｜ESG・グリーン開発｜エンタープライズソリューション",
                 expertise_h2: "提供サービス",
                 card1_h3: "戦略アドバイザリー／マネジメント・コンサルティング",
