--- a/index.html
+++ b/index.html
@@ -798,6 +798,7 @@
 
             document.getElementById('about-p1').innerHTML = translations[lang].about_p1;
             document.getElementById('about-p2').textContent = translations[lang].about_p2;
+            document.getElementById('about-p3').textContent = translations[lang].about_p3;
             document.getElementById('map-p').innerHTML = translations[lang].map_p;
 
             document.getElementById('expertise-h2').textContent = translations[lang].expertise_h2;
